[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://assets/net.png" type="Texture" id=2]
[ext_resource path="res://src/gamemode/util/Field.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 232, 40 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 127.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 104, 102 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 104, 102 )

[node name="Field" type="Node2D"]
z_index = -10
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1, -79 )
texture = ExtResource( 1 )

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2( -1, 0 )
collision_mask = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall"]
polygon = PoolVector2Array( 201, 43, 201, -196, -199, -196, -199, 43, -253, 42, -248, -267.594, 229.308, -286, 250, -235, 251, 43 )

[node name="Floor" type="StaticBody2D" parent="." groups=["floor"]]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 2, 33 )
shape = SubResource( 2 )

[node name="Net" type="StaticBody2D" parent="."]
position = Vector2( 0, -23 )
collision_mask = 7

[node name="Sprite" type="Sprite" parent="Net"]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Net"]
polygon = PoolVector2Array( -7, -15, 0, -16, 7, -15, 7, 20, -7, 20 )

[node name="PlayerWall" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerWall"]
position = Vector2( 0, -128 )
shape = SubResource( 1 )

[node name="AreaField1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaField1"]
position = Vector2( -104, -102 )
shape = SubResource( 3 )

[node name="AreaField2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaField2"]
position = Vector2( 104, -102 )
shape = SubResource( 4 )

[node name="Positions" type="Node2D" parent="."]

[node name="BallStart" type="Node2D" parent="Positions"]
position = Vector2( 0, -180 )

[node name="Char1" type="Position2D" parent="Positions/BallStart"]
position = Vector2( -160, 0 )

[node name="Char2" type="Position2D" parent="Positions/BallStart"]
position = Vector2( 160, 0 )

[connection signal="body_entered" from="AreaField1" to="." method="_on_AreaField1_body_entered"]
[connection signal="body_entered" from="AreaField2" to="." method="_on_AreaField2_body_entered"]
